fixing logo size to get rid of distortion

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -7,7 +7,7 @@ body {
     display: block;
     flex-direction: row;
     justify-content: Center;
-    height: 750px;
+    height: 650px;
 }
 
 
